Bug 79975 - GALLERY: images no longer have transparency behind them
Summary: GALLERY: images no longer have transparency behind them
Status: RESOLVED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: graphics stack (show other bugs)
Version:
(earliest affected)
4.2.4.2 release
Hardware: Other All
: low trivial
Assignee: Caolán McNamara
URL:
Whiteboard: target:4.5.0 target:4.4.4
Keywords: bibisected, bisected, regression
Depends on:
Blocks: Gallery
  Show dependency treegraph
 
Reported: 2014-06-13 11:34 UTC by Yousuf Philips (jay) (retired)
Modified: 2016-10-23 21:17 UTC (History)
9 users (show)

See Also:
Crash report or crash signature:


Attachments
LibO 4.1 (top) vs LibO 4.3 beta (bottom) (312.99 KB, image/png)
2014-06-13 11:34 UTC, Yousuf Philips (jay) (retired)
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Yousuf Philips (jay) (retired) 2014-06-13 11:34:27 UTC
Created attachment 100972 [details]
LibO 4.1 (top) vs LibO 4.3 beta (bottom)

This is a regression starting in 4.2. Tested in 4.2.4, 4.2.6 and 4.3 beta 2.
Comment 1 Jorendc 2014-06-13 11:40:58 UTC
Repro, Mac OSX 10.9 with LibreOffice 4.3b2
Comment 2 Dave Richards 2014-12-04 16:47:12 UTC
 5997ef2caf7fc40b8899eab0100042836d2db030 is the first bad commit
commit 5997ef2caf7fc40b8899eab0100042836d2db030
Author: Bjoern Michaelsen <bjoern.michaelsen@canonical.com>
Date:   Thu Oct 17 13:27:56 2013 +0000

    source-hash-5e5f3671f8448ee21b00f0d2a08b214e61f7f744
    
    commit 5e5f3671f8448ee21b00f0d2a08b214e61f7f744
    Author:     Caolán McNamara <caolanm@redhat.com>
    AuthorDate: Wed Jun 19 09:20:15 2013 +0100
    Commit:     Gerrit Code Review <gerrit@vm2.documentfoundation.org>
    CommitDate: Wed Jun 19 08:23:15 2013 +0000
    
        Updated core
        Project: help  d6621f90fda77c1d2232f511f42b3ed0dc38ac68

:100644 100644 18d52a35b45268c20e93e9b0ff4c5e1067e0ad64 c4b23b0588c9fa7b3c60ba1e25b98d64e1dd2b86 M	ccache.log
:100644 100644 7ad0aaf03e336d09d0b3f535eea55a7287c4340b b9ef04809bbee9b139a3c63b8817c2967fc9d4ba M	commitmsg
:100644 100644 35d0b76b1d1be78f790415330597868a80caaa32 72e082814ca670d18895121fc54c36af5f286508 M	dev-install.log
:100644 100644 ce36d86efb36913788abf3655c802931db226cd9 6c23c99b99dae72bb03578b82232f28d5d432a4b M	make.log
:040000 040000 fe5578064d1454d73201fd81790bf6effa1c84e6 badd662ae5732c1faeaf64bb4b04cfa4a8a165bb M	opt

# bad: [752769ad0d2179e17ea0a08cc9004df7b890305b] source-hash-60c64b437c6678dd1d3fa3a6fc2b7da0480890d4
# good: [c2069a369d738078124812312d51f21ea1ce2421] source-hash-f160e4935c474a5293b3d3c11b3d538efb4767a0
git bisect start 'last42onmaster' 'last41onmaster'
# bad: [186181c7d6a957b0fcdbc7ff66866f1abfff988e] source-hash-79850f25987d12c8ee91dfd0f699a562f341bf67
git bisect bad 186181c7d6a957b0fcdbc7ff66866f1abfff988e
# bad: [4e504a2344a5356cdcabe4a091f2e626b40aaede] source-hash-f39e8cadc74573a787641615406777da5a9e5343
git bisect bad 4e504a2344a5356cdcabe4a091f2e626b40aaede
# good: [69bf614869471f46413fe1d2af5976b2e6d85084] source-hash-76dea8b2db906156e77f78738a68f932a15afd4b
git bisect good 69bf614869471f46413fe1d2af5976b2e6d85084
# bad: [bb5ad7a1787aa87f172ccc8ed1f5be8374184a8f] source-hash-6bf79576aeca243db553ed3b5eade492dc35337b
git bisect bad bb5ad7a1787aa87f172ccc8ed1f5be8374184a8f
# bad: [7d878017eaa2fc1d2eab72689a5e453622d474a2] source-hash-b139f6fedfcf3cbed0eadeb007e2155b576413d2
git bisect bad 7d878017eaa2fc1d2eab72689a5e453622d474a2
# bad: [5997ef2caf7fc40b8899eab0100042836d2db030] source-hash-5e5f3671f8448ee21b00f0d2a08b214e61f7f744
git bisect bad 5997ef2caf7fc40b8899eab0100042836d2db030
# good: [89d00e8a0afc7c82d82ff03a140cfb2c0555e595] source-hash-af9e58d6de158eb8f479f26c77c5e71e95b96881
git bisect good 89d00e8a0afc7c82d82ff03a140cfb2c0555e595
Comment 3 Matthew Francis 2015-01-06 04:59:01 UTC
The behaviour changed as of the below commit.

Adding Cc: to caolanm@redhat.com. Was this change intended with respect to the gallery previews... ?


commit 60446a0386b6d40899f6817c9545414841ee3522
Author:     Armin Le Grand <alg@apache.org>
AuthorDate: Tue May 7 09:37:01 2013 +0000
Commit:     Caolán McNamara <caolanm@redhat.com>
CommitDate: Tue Jun 18 16:46:39 2013 +0100

    Related: #i122120# corrected flag for drawing checkerboards...
    
    adapted previews, added to configuration
    
    (cherry picked from commit c17e634e125f524d153e1ad8febff6d11b810ee4)
Comment 4 Caolán McNamara 2015-01-12 16:56:31 UTC
my understanding is that it was. It can be toggled on and off in the config. I'll toggle it back on again in master and "someone else" can decide which is better and backport it if they feel they want to
Comment 5 Commit Notification 2015-01-12 16:57:57 UTC
Caolán McNamara committed a patch related to this issue.
It has been pushed to "master":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=8b2a9a37306a7febf28e419280d1782ff230761a

Resolves: fdo#79975 toggle checkered background back on

It will be available in 4.5.0.

The patch should be included in the daily builds available at
http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
http://wiki.documentfoundation.org/Testing_Daily_Builds
Affected users are encouraged to test the fix and report feedback.
Comment 6 Yousuf Philips (jay) (retired) 2015-01-13 11:00:19 UTC
@UX-Advise: Should transparency be shown on images in the gallery?

LibO 4.1 (top) vs LibO 4.3 beta (bottom) - attachment 100972 [details]
Comment 7 Dave Richards 2015-01-13 14:31:44 UTC
My view is that the visual cue of transparent image is better.  Very often a gallery will contain transparent images AND images with a white background.  It's nice to see this fact prior to dragging into the current document.
Comment 8 Yousuf Philips (jay) (retired) 2015-04-20 20:02:51 UTC
@Caolan: Can we cherry-pick for 4.4 as well.
Comment 9 Caolán McNamara 2015-04-21 12:27:32 UTC
https://gerrit.libreoffice.org/15460
Comment 10 Commit Notification 2015-04-21 19:32:12 UTC
Caolán McNamara committed a patch related to this issue.
It has been pushed to "libreoffice-4-4":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=d0e96a62a1f497020f5d15640af05ed6224f98e0&h=libreoffice-4-4

Resolves: tdf#79975 toggle checkered background back on

It will be available in 4.4.4.

The patch should be included in the daily builds available at
http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
http://wiki.documentfoundation.org/Testing_Daily_Builds
Affected users are encouraged to test the fix and report feedback.
Comment 11 Robinson Tryon (qubit) 2015-12-17 08:23:19 UTC Comment hidden (obsolete)