Resolves: fdo#79975 toggle checkered background back on

Change-Id: Id856d8dbf437acb7e528e60b4d1b012102ff0557